# ArdKit-GUI

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  VERSION.md  main.md  resources.qrc
data/: generate_test_video.sh
qml/: main.qml
qml/components/: ConnectionDialog.qml  CustomToolBar.qml  MessageConsole.qml  VideoDisplay.qml
resources/icons/: placeholder.txt
scripts/: version.sh
src/: configmanager.cpp  configmanager.h  connectionmanager.cpp  connectionmanager.h  main.cpp  messagelogger.cpp  messagelogger.h  version.h.in  videodecoder.cpp  videodecoder.h  videohandler.cpp  videohandler.h  videorenderer.cpp  videorenderer.h
tools/mediakit/: CMakeLists.txt  README.md
tools/mediakit/include/: rtmp_stream.h  rtsp_stream.h  stream_protocol.h  version.h.in
tools/mediakit/scripts/: version.sh
tools/mediakit/src/: main.cpp  rtmp_stream.cpp  rtsp_stream.cpp  stream_protocol.cpp
